2010-03-27  Roland Clobus <rclobus@rclobus.nl>
	* all: Based on svn 1488 (branch 0.12.3) and 1524: Use en_US spelling
	(canceled and monopolize)
	* en_GB.po: Imported from Launchpad, thanks to Philipp Kleinhenz.
	This translation inspired the spelling correction to en_US in the
	source code.

2010-03-25  Roland Clobus <rclobus@rclobus.nl>
	* nl.po: Another round of spell checking

2010-03-18  Roland Clobus <rclobus@rclobus.nl>
	* es.po: Merged with Launchpad 2010-03-11 19:48+0000
	* nl.po: Use a spell checker

2010-03-11 Roland Clobus <rclobus@rclobus.nl>
	* de.po: Improvement suggested by Jochen Kemnade on Launchpad

2010-01-24 Roland Clobus <rclobus@bigfoot.com>
	* nl.po: Fixed a translation and removed a few wrong word separations

2009-11-04 Roland Clobus <rclobus@bigfoot.com>
	* all: Final line number update for 0.12.3

2009-10-25 Roland Clobus <rclobus@bigfoot.com>
	* fr.po: Fixed a typo found by agendacobra

2009-10-20 Roland Clobus <rclobus@bigfoot.com>
	* it.po: Fixed some double keyboard shortcuts

2009-10-20 Giancarlo Capella <giancarlo@comm.cc>
	* it.po: Updated to 0.12.3

2009-10-18 Jean-Charles GRANGER <traduction@vecteur.org>
	* fr.po: Updated to 0.12.3

2009-10-18 Roland Clobus <rclobus@bigfoot.com>
	* fr.po: Fixed some double keyboard shortcuts

2009-10-16 Roland Clobus <rclobus@bigfoot.com>
	* fr.po: Synchronisation with Launchpad.net

2009-10-15 Roland Clobus <rclobus@bigfoot.com>
	* all: Line number update for 0.12.3
	* nl.po: Updated to 0.12.3, fixed a typo
	* ja.po: Synchronisation with Launchpad.net
	* pt:po: Synchronisation with Launchpad.net

2008-05-01 Roland Clobus <rclobus@bigfoot.com>
	* fr.po, hu.po, it.po, nl.po, sv.po: Update 0.12.1 to 0.12.2
	* da.po, de.po, es.po, fr.po, hu.po, pt.po: Synchronisation with
	Launchpad.net
	* all: Line number update to 0.12.2
	
2008-04-27 Roland Clobus <rclobus@bigfoot.com>
	* all: Line number update for 0.12.1

2008-04-27 Filipe Roque <flip.roque@gmail.com>